============================================================================
SUMMARY OF NEW FEATURES AND BUG FIXES SINCE V4.0
============================================================================

Version 6.8 - not yet released
* calculations
  - use maximum speed configured in plane setup as limit for calculations
* infoboxes
  - add "Fin MC0 AltD" infobox (#2824)
* task editor
  - added one-click task reversal (#1730)
  - show name of loaded/saved tasks in dialog title (#1924)
* user interface 
  - checklist remembers last opened list (#3110)

Version 6.7.2 - not yet released
* user interface
  - fix crash in alternates list (#3146)
  - new translation: Slovenian
* infoboxes
  - fix "Fin Dist" infobox for GOTO tasks (#3152)
* configuration
  - increase upper limit for plane wing area (#3154)
  - fix saving of custom polars (#3173)
* waypoints
  - correctly handle S latitudes and W longitudes in waypoint editor (#3155)
  - fix saving waypoints to cup format files from waypoint editor
* Android
  - enable Vivante workaround for GC600 (#3184)
* Kobo
  - fix misassigned passphrase in WiFi dialog (#3151)
  - work around Kobo Touch N905B kernel crash in display driver (#3145)
  - work around Kobo Touch N905B touch screen bug
  - the "Home" button opens the menu
  - mount /dev/pts for telnetd (#3135)

Version 6.7.1 - 2013/10/11
* replay
  - fix crash replaying an IGC file with no B record extensions (#3107)
* data files
  - save the previous log file in "xcsoar-old.log"
* user interface
  - new translation: Lithuanian
* devices
  - CAI302: work around transmission errors during IGC file download (#3074)
* Android
  - fix crash in "credits" dialog on Android 4 (#3106)
  - work around Vivante GPU texture bugs (#1995, #2228, #2990, #2998, #3105)
* Kobo
  - fix passphrase entry in WiFi setup (#3053)
  - fix compatibility with old Kobo firmware

Version 6.7 - 2013/09/30
* new target: Kobo e-book readers
* user interface
  - resizable main window