@@ -35,7 +35,7 @@ struct MoreData;
 struct CrossSectionLook;
 struct AirspaceLook;
 struct ChartLook;
-struct AirspaceRendererSettings;
+struct MapSettings;
 class Airspaces;
 class RasterTerrain;
 class ChartRenderer;
@@ -87,7 +87,7 @@ public:
                       const DerivedInfo &_calculated_info,
                       const GlideSettings &glide_settings,
                       const GlidePolar &glide_polar,
-                      const AirspaceRendererSettings &ar_settings);
+                      const MapSettings &map_settings);
 
   /**
    * Renders the CrossSection to the given canvas in the given PixelRect
