@@ -5,6 +5,8 @@ SUMMARY OF NEW FEATURES AND BUG FIXES SINCE V4.0
 Version 6.8 - not yet released
 * calculations
   - use maximum speed configured in plane setup as limit for calculations
+* airspace cross-section
+  - sync map & cross-section view zoom setting (#2913)
 * infoboxes
   - add "Fin MC0 AltD" infobox (#2824)
 * task editor
